--- a/config/sync/core.entity_form_display.block_content.follow_me.default.yml
+++ b/config/sync/core.entity_form_display.block_content.follow_me.default.yml
@@ -12,7 +12,6 @@ dependencies:
     - content_moderation
     - field_layout
     - layout_discovery
-    - paragraphs
 third_party_settings:
   field_layout:
     id: layout_onecol
@@ -24,34 +23,16 @@ mode: default
 content:
   field_add_link_to_rss_feed_page:
     type: boolean_checkbox
-    weight: 8
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_display_social:
     type: options_buttons
-    weight: 7
+    weight: 4
     region: content
     settings: {  }
-    third_party_settings: {  }
-  field_links:
-    type: paragraphs
-    weight: 6
-    region: content
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      closed_mode: summary
-      autocollapse: none
-      closed_mode_threshold: 0
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-      features:
-        duplicate: duplicate
-        collapse_edit_all: collapse_edit_all
     third_party_settings: {  }
   field_widget_title:
     type: string_textfield
@@ -71,15 +52,16 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 4
+    weight: 2
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 5
+    weight: 3
     settings: {  }
     region: content
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_links: true
