--- a/.travis.yml
+++ b/.travis.yml
@@ -31,11 +31,14 @@ env:
     - JOB="job:run-kernel-tests widgets-2"
     - JOB="job:run-kernel-tests os-theme-preview,cp-appearance,profiles"
     - JOB="job:run-kernel-tests publications"
-    - JOB="job:run-kernel-tests redirect,vsite,os"
+    - JOB="job:run-kernel-tests redirect,vsite"
+    - JOB="job:run-kernel-tests os"
     - JOB="job:run-kernel-tests cp"
     - JOB="job:run-kernel-tests other,cp-menu,wysiwyg"
-    - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,vsite,breadcrumbs,analytics,cp-menu,os,publications,cp-appearance,redirect,twitter"
-    - JOB="job:run-functional-javascript-tests classes,events,pages,publications,widgets,cp-appearance,cp-menu,profiles,cp,vsite,mailchimp,metatag,redirect,os-theme-preview,os"
+    - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,vsite,breadcrumbs,analytics,cp-menu,publications,cp-appearance,redirect,twitter"
+    - JOB="job:run-functional-tests os"
+    - JOB="job:run-functional-javascript-tests classes,pages,publications,widgets,cp-appearance,cp-menu,profiles,cp,vsite,mailchimp,metatag,redirect,os-theme-preview,os"
+    - JOB="job:run-functional-javascript-tests events"
 #    - JOB=job:run-behat-tests
 
 before_install:
