--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,14 @@ services:
     ports:
       - "9222:9222"
 
+  traefik:
+    image: traefik:1.7
+    command: -c /dev/null --web --docker --logLevel=INFO
+    ports:
+      - '${WEB_PORT-80}:80'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
   node:
     image: mhart/alpine-node:11
     container_name: "${PROJECT_NAME}_drupal_nodejs"
