--- a/.travis/docker-compose.yml
+++ b/.travis/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       DB_DRIVER: $DB_DRIVER
       PHP_XDEBUG: $PHP_XDEBUG_ENABLED
       PHP_DATE_TIMEZONE: "America/New_York"
+      COMPOSER_AUTH: $COMPOSER_AUTH
     volumes:
       - ./:/var/www/html
 
